# SerpRS

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  release.yml
benches/: throughput.rs
examples/: basic_search.rs  debug_api.rs  demo_without_api.rs  mcp_integration.rs  mock_search_demo.rs  specialized_search.rs  streaming.rs
src/: client.rs  error.rs  lib.rs  main.rs  query.rs  response.rs  retry.rs  streaming.rs
tests/: integration.rs
