[package]
name = "serp-sdk"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
description = "A comprehensive, production-ready Rust SDK for SerpAPI with async support, type safety, and ergonomic APIs. Developed during the Realtime Search AI Hackathon powered by SerpAPI."
license = "MIT OR Apache-2.0"
authors = [
    "Hamze Ghalebi <hamze@example.com>",
    "Reetika Gautam <reetika@example.com>", 
    "Leon Carlo <leon@example.com>"
]
repository = "https://github.com/RustSandbox/SerpRS"
homepage = "https://github.com/RustSandbox/SerpRS"
documentation = "https://docs.rs/serp-sdk"
readme = "README.md"
keywords = ["search", "serpapi", "web", "scraping", "google"]
categories = ["web-programming", "api-bindings", "asynchronous"]
include = [
    "src/**/*",
    "examples/**/*",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
criterion = { version = "0.7", features = ["html_reports"] }

[features]
default = ["streaming"]
mcp = []
streaming = []

[[bench]]
name = "throughput"
harness = false

[[example]]
name = "basic_search"

[[example]]
name = "streaming"

[[example]]
name = "mcp_integration"
